# LearnRayTracing

./: .gitignore  CMakeLists.txt  HitObject.cpp  HitObject.h  Mat_Dielectrics.cpp  Mat_Dielectrics.h  Mat_Diffuse_Lambert.cpp  Mat_Diffuse_Lambert.h  Mat_PBR_CookTorrance.cpp  Mat_PBR_CookTorrance.h  Mat_Specular_Metal.cpp  Mat_Specular_Metal.h  Material.cpp  Material.h  MathTools.cpp  MathTools.h  Quad.cpp  Quad.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  main.cpp
libs/include/glog/: config.h
libs/lib/cmake/glog/: glog-targets.cmake
